--- a/task2.css
+++ b/task2.css
@@ -9,6 +9,7 @@
     gap: 10px;
     background-color: black;
     color: aqua;
+    justify-content: space-evenly;
 
 }
 .item sup{
@@ -17,4 +18,20 @@
     top: 0px;
     left: 15px;
 
+}
+.item2{
+    display: inline-block;
+    margin: 5px;
+    background-color: green;
+    left: 150px;
+    border-radius: 5px;
+}
+.item3{
+    display: inline-block;
+
+    background-color: red;
+    align-items: center;
+    left: 200px;
+    margin: 5px; 
+    border-radius: 5px;
 }
